--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     //google play services
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.google.android.gms:play-services-places:15.0.1'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
 
 }
